--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jupyterlab_vim",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Code cell vim bindings",
-  "author": "Jacques Kvam",
+  "author": "Jacques Kvam, yoogottamk",
   "license": "MIT",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,17 +34,17 @@
     "extension": true
   },
   "dependencies": {
-    "@jupyterlab/application": "^1.0.1",
-    "@jupyterlab/codemirror": "^1.0.1",
-    "@jupyterlab/cells": "^1.0.1",
-    "@jupyterlab/notebook": "^1.0.1",
-    "@phosphor/commands": "^1.6.3",
-    "@phosphor/coreutils": "^1.3.1",
-    "@phosphor/domutils": "^1.1.3",
-    "@types/codemirror": "^0.0.76"
+    "@jupyterlab/application": "^2.1.2",
+    "@jupyterlab/codemirror": "^2.1.1",
+    "@jupyterlab/cells": "^2.1.2",
+    "@jupyterlab/notebook": "^2.1.2",
+    "@lumino/commands": "^1.11.0",
+    "@lumino/coreutils": "^1.5.0",
+    "@lumino/domutils": "^1.2.0",
+    "@types/codemirror": "^0.0.95"
   },
   "devDependencies": {
-    "rimraf": "^2.6.2",
-    "typescript": "~3.5.1"
+    "rimraf": "^3.0.2",
+    "typescript": "~3.9.5"
   }
 }
